Thu Sep 30 15:34:19 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release 0.0.12

Tue Sep 28 01:31:52 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: adding missing locks around a list
	  update. Though gam_server is single threaded maybe this
	  is the cause of a list corruption generating a loop.

Mon Sep 27 12:47:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in server/Makefile.am: release 0.0.11

Mon Sep 27 11:53:01 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* server/gam_inotify.c server/local_inotify.h: applied patch
	  for inotify 0.10 from John McCutchan

Sun Sep 26 21:21:05 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* libgamin/gam_api.c: added unimplemented entry points 
	  FAMSuspendMonitor and FAMResumeMonitor, c.f. #133162
	* doc/gamin-api.xml doc/gamin-refs.xml: rebuild 

Fri Sep 24 15:15:08 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/gam_inotify.c server/local_inotify.h: always
	  compile in the inotify support and fallback to dnotify if we cannot
	  find kernel support at runtime. Patch from Martin Schlemmer.
	* server/gam_inotify.c: avoid the glib warning and use gam_debug

Wed Sep 22 00:20:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in server/gam_excludes.c server/gam_server.c: applied
	  a patch to cleanup dnotify and inotify duality from Martin Schlemmer

Tue Sep 21 13:30:11 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* configure.in gamin.spec.in: release of 0.0.10
	* libgamin/fam.h libgamin/gam_api.c: fixing an API/ABI incompatibility
	  between FAM and gamin about FAMErrno and FamErrlist, which though
	  in fam-2.6.10 are documented as not used, should close bug #132944

Mon Sep 20 17:18:23 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* doc/config.html doc/*: added documentation for the config file.

Mon Sep 20 16:21:24 CEST 2004 Daniel Veillard <veillard@redhat.com>
